--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,28 @@
           </execution>
         </executions>
       </plugin>
+      
+      <plugin>
+      <groupId>org.codehaus.mojo</groupId>
+      <artifactId>animal-sniffer-maven-plugin</artifactId>
+      <version>1.14</version>
+      <executions>
+        <execution>
+          <id>check-java-version</id>
+          <phase>verify</phase>
+          <goals>
+            <goal>check</goal>
+          </goals>
+          <configuration>
+            <signature>
+              <groupId>org.codehaus.mojo.signature</groupId>
+              <artifactId>java17</artifactId>
+              <version>1.0</version>
+            </signature>
+          </configuration>
+        </execution>
+      </executions>
+    </plugin>
 
 			<!-- For Tomcat -->
 			<plugin>
