--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,9 @@
    <packaging>war</packaging>
    <version>1.0.3-SNAPSHOT</version>
    <name>Maven Demo pour Extia</name>
+   
    <properties>
-      <jdk.version>1.8</jdk.version>
+      <jdk.version>1.7</jdk.version>
       <spring.version>4.1.1.RELEASE</spring.version>
       <jstl.version>1.2</jstl.version>
       <junit.version>4.11</junit.version>
@@ -94,7 +95,7 @@
                            <message>Please consider using the maven-invoker-plugin (http://maven.apache.org/plugins/maven-invoker-plugin/)!</message>
                         </bannedPlugins>
                         <requireMavenVersion>
-                           <version>3.3.3</version>
+                           <version></version>
                         </requireMavenVersion>
                         <requireJavaVersion>
                            <version>1.8</version>
@@ -107,27 +108,27 @@
                </execution>
             </executions>
          </plugin>
-         <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>animal-sniffer-maven-plugin</artifactId>
-            <version>1.14</version>
-            <executions>
-               <execution>
-                  <id>check-java-version</id>
-                  <phase>verify</phase>
-                  <goals>
-                     <goal>check</goal>
-                  </goals>
-                  <configuration>
-                     <signature>
-                        <groupId>org.codehaus.mojo.signature</groupId>
-                        <artifactId>java17</artifactId>
-                        <version>1.0</version>
-                     </signature>
-                  </configuration>
-               </execution>
-            </executions>
-         </plugin>
+<!--          <plugin> -->
+<!--             <groupId>org.codehaus.mojo</groupId> -->
+<!--             <artifactId>animal-sniffer-maven-plugin</artifactId> -->
+<!--             <version>1.14</version> -->
+<!--             <executions> -->
+<!--                <execution> -->
+<!--                   <id>check-java-version</id> -->
+<!--                   <phase>verify</phase> -->
+<!--                   <goals> -->
+<!--                      <goal>check</goal> -->
+<!--                   </goals> -->
+<!--                   <configuration> -->
+<!--                      <signature> -->
+<!--                         <groupId>org.codehaus.mojo.signature</groupId> -->
+<!--                         <artifactId>java14</artifactId> -->
+<!--                         <version>1.0</version> -->
+<!--                      </signature> -->
+<!--                   </configuration> -->
+<!--                </execution> -->
+<!--             </executions> -->
+<!--          </plugin> -->
       </plugins>
    </build>
    <organization>
@@ -152,4 +153,6 @@
          <url>http://localhost:9000/content/repositories/snapshots/</url>
       </snapshotRepository>
    </distributionManagement>
+   <url>http://github.com/SimonDevineau/MavenExtiaDemo</url>
+   <description>This is an introduction to maven</description>
 </project>
