--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
    <groupId>com.simondevineau.extia</groupId>
    <artifactId>maven-demo</artifactId>
    <packaging>war</packaging>
-   <version>1.0.3-SNAPSHOT</version>
+   <version>1.0.3</version>
    <name>Maven Demo pour Extia</name>
    
    <properties>
@@ -95,7 +95,7 @@
                            <message>Please consider using the maven-invoker-plugin (http://maven.apache.org/plugins/maven-invoker-plugin/)!</message>
                         </bannedPlugins>
                         <requireMavenVersion>
-                           <version></version>
+                           <version>3.3</version>
                         </requireMavenVersion>
                         <requireJavaVersion>
                            <version>1.8</version>
@@ -139,7 +139,7 @@
       <url>http://github.com/SimonDevineau/MavenExtiaDemo</url>
       <connection>scm:git:http://github.com/SimonDevineau/MavenExtiaDemo</connection>
       <developerConnection>scm:git:http://github.com/SimonDevineau/MavenExtiaDemo</developerConnection>
-      <tag>HEAD</tag>
+      <tag>maven-demo-1.0.3</tag>
    </scm>
    <distributionManagement>
       <repository>
