--- a/pom.xml
+++ b/pom.xml
@@ -1,158 +1,209 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-   <modelVersion>4.0.0</modelVersion>
-   <groupId>com.simondevineau.extia</groupId>
-   <artifactId>maven-demo</artifactId>
-   <packaging>war</packaging>
-   <version>1.0.3</version>
-   <name>Maven Demo pour Extia</name>
-   
-   <properties>
-      <jdk.version>1.7</jdk.version>
-      <spring.version>4.1.1.RELEASE</spring.version>
-      <jstl.version>1.2</jstl.version>
-      <junit.version>4.11</junit.version>
-      <logback.version>1.0.13</logback.version>
-      <jcl-over-slf4j.version>1.7.5</jcl-over-slf4j.version>
-   </properties>
-   <dependencies>
-      <!-- Unit Test -->
-      <dependency>
-         <groupId>junit</groupId>
-         <artifactId>junit</artifactId>
-         <version>${junit.version}</version>
-      </dependency>
-      <!-- Spring Core -->
-      <dependency>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-core</artifactId>
-         <version>${spring.version}</version>
-         <exclusions>
-            <exclusion>
-               <groupId>commons-logging</groupId>
-               <artifactId>commons-logging</artifactId>
-            </exclusion>
-         </exclusions>
-      </dependency>
-      <dependency>
-         <groupId>org.slf4j</groupId>
-         <artifactId>jcl-over-slf4j</artifactId>
-         <version>${jcl-over-slf4j.version}</version>
-      </dependency>
-      <dependency>
-         <groupId>ch.qos.logback</groupId>
-         <artifactId>logback-classic</artifactId>
-         <version>${logback.version}</version>
-      </dependency>
-      <dependency>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-web</artifactId>
-         <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-webmvc</artifactId>
-         <version>${spring.version}</version>
-      </dependency>
-      <!-- jstl -->
-      <dependency>
-         <groupId>jstl</groupId>
-         <artifactId>jstl</artifactId>
-         <version>${jstl.version}</version>
-      </dependency>
-   </dependencies>
-   <build>
-      <finalName>${project.artifactId}</finalName>
-      <plugins>
-         <!-- Set JDK Compiler Level -->
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>2.3.2</version>
-            <configuration>
-               <source>${jdk.version}</source>
-               <target>${jdk.version}</target>
-            </configuration>
-         </plugin>
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-enforcer-plugin</artifactId>
-            <version>1.4.1</version>
-            <executions>
-               <execution>
-                  <id>enforce-versions</id>
-                  <goals>
-                     <goal>enforce</goal>
-                  </goals>
-                  <configuration>
-                     <rules>
-                        <bannedPlugins>
-                           <!-- will only display a warning but does not fail the build. -->
-                           <level>WARN</level>
-                           <excludes>
-                              <exclude>org.apache.maven.plugins:maven-verifier-plugin</exclude>
-                           </excludes>
-                           <message>Please consider using the maven-invoker-plugin (http://maven.apache.org/plugins/maven-invoker-plugin/)!</message>
-                        </bannedPlugins>
-                        <requireMavenVersion>
-                           <version>3.3.3</version>
-                        </requireMavenVersion>
-                        <requireJavaVersion>
-                           <version>1.8</version>
-                        </requireJavaVersion>
-                        <requireOS>
-                           <family>unix</family>
-                        </requireOS>
-                     </rules>
-                  </configuration>
-               </execution>
-            </executions>
-         </plugin>
-<!--          <plugin> -->
-<!--             <groupId>org.codehaus.mojo</groupId> -->
-<!--             <artifactId>animal-sniffer-maven-plugin</artifactId> -->
-<!--             <version>1.14</version> -->
-<!--             <executions> -->
-<!--                <execution> -->
-<!--                   <id>check-java-version</id> -->
-<!--                   <phase>verify</phase> -->
-<!--                   <goals> -->
-<!--                      <goal>check</goal> -->
-<!--                   </goals> -->
-<!--                   <configuration> -->
-<!--                      <signature> -->
-<!--                         <groupId>org.codehaus.mojo.signature</groupId> -->
-<!--                         <artifactId>java14</artifactId> -->
-<!--                         <version>1.0</version> -->
-<!--                      </signature> -->
-<!--                   </configuration> -->
-<!--                </execution> -->
-<!--             </executions> -->
-<!--          </plugin> -->
-      </plugins>
-   </build>
-   <organization>
-      <name>Extia</name>
-      <url>www.extia.fr</url>
-   </organization>
-   <scm>
-      <url>http://github.com/SimonDevineau/MavenExtiaDemo</url>
-      <connection>scm:git:http://github.com/SimonDevineau/MavenExtiaDemo</connection>
-      <developerConnection>scm:git:http://github.com/SimonDevineau/MavenExtiaDemo</developerConnection>
-      <tag>maven-demo-1.0.3</tag>
-   </scm>
-   <distributionManagement>
-      <repository>
-         <id>releases</id>
-         <name>Releases</name>
-         <url>http://localhost:9000/content/repositories/releases/</url>
-      </repository>
-      <snapshotRepository>
-         <id>snapshots</id>
-         <name>Snapshots</name>
-         <url>http://localhost:9000/content/repositories/snapshots/</url>
-      </snapshotRepository>
-   </distributionManagement>
-   <url>http://github.com/SimonDevineau/MavenExtiaDemo</url>
-   <description>This is an introduction to maven</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.simondevineau.extia</groupId>
+	<artifactId>maven-demo</artifactId>
+	<packaging>war</packaging>
+	<version>1.0.3</version>
+	<name>Maven Demo pour Extia</name>
+
+	<properties>
+		<jdk.version>1.7</jdk.version>
+		<spring.version>4.1.1.RELEASE</spring.version>
+		<jstl.version>1.2</jstl.version>
+		<junit.version>4.11</junit.version>
+		<logback.version>1.0.13</logback.version>
+		<jcl-over-slf4j.version>1.7.5</jcl-over-slf4j.version>
+		<jboss75x.home>/Users/simondevineau/Workspace/tools/JBoss/EAP-6.4.0/standalone</jboss75x.home>
+	</properties>
+	<dependencies>
+		<!-- Unit Test -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+		</dependency>
+		<!-- Spring Core -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>${jcl-over-slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<!-- jstl -->
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>${jstl.version}</version>
+		</dependency>
+	</dependencies>
+	<build>
+		<finalName>${project.artifactId}</finalName>
+		<plugins>
+			<!-- Set JDK Compiler Level -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>${jdk.version}</source>
+					<target>${jdk.version}</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<version>1.4.1</version>
+				<executions>
+					<execution>
+						<id>enforce-versions</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<bannedPlugins>
+									<!-- will only display a warning but does not fail the build. -->
+									<level>WARN</level>
+									<excludes>
+										<exclude>org.apache.maven.plugins:maven-verifier-plugin</exclude>
+									</excludes>
+									<message>Please consider using the maven-invoker-plugin
+										(http://maven.apache.org/plugins/maven-invoker-plugin/)!</message>
+								</bannedPlugins>
+								<requireMavenVersion>
+									<version>3.3.3</version>
+								</requireMavenVersion>
+								<requireJavaVersion>
+									<version>1.8</version>
+								</requireJavaVersion>
+								<requireOS>
+									<family>unix</family>
+								</requireOS>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- <plugin> -->
+			<!-- <groupId>org.codehaus.mojo</groupId> -->
+			<!-- <artifactId>animal-sniffer-maven-plugin</artifactId> -->
+			<!-- <version>1.14</version> -->
+			<!-- <executions> -->
+			<!-- <execution> -->
+			<!-- <id>check-java-version</id> -->
+			<!-- <phase>verify</phase> -->
+			<!-- <goals> -->
+			<!-- <goal>check</goal> -->
+			<!-- </goals> -->
+			<!-- <configuration> -->
+			<!-- <signature> -->
+			<!-- <groupId>org.codehaus.mojo.signature</groupId> -->
+			<!-- <artifactId>java14</artifactId> -->
+			<!-- <version>1.0</version> -->
+			<!-- </signature> -->
+			<!-- </configuration> -->
+			<!-- </execution> -->
+			<!-- </executions> -->
+			<!-- </plugin> -->
+
+		</plugins>
+	</build>
+
+	<profiles>
+		<profile>
+			<id>cargo-jboss75x</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.cargo</groupId>
+						<artifactId>cargo-maven2-plugin</artifactId>
+						<version>1.4.18</version>
+						<executions>
+							<execution>
+								<id>jboss75x</id>
+								<phase>install</phase>
+								<goals>
+									<goal>deploy</goal>
+								</goals>
+								<configuration>
+									<!-- Container configuration -->
+									<container>
+										<containerId>jboss75x</containerId>
+									</container>
+									<!-- Configuration to use with the container (which will also configure 
+										the deployer) -->
+									<configuration>
+										<type>standalone</type>
+										<home>${jboss75x.home}</home>
+										<properties>
+										</properties>
+									</configuration>
+									<deployables>
+										<deployable>
+											<groupId>${project.groupId}</groupId>
+											<artifactId>${project.artifactId}</artifactId>
+											<type>war</type>
+											<properties>
+											</properties>
+										</deployable>
+									</deployables>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+	<organization>
+		<name>Extia</name>
+		<url>www.extia.fr</url>
+	</organization>
+	<scm>
+		<url>http://github.com/SimonDevineau/MavenExtiaDemo</url>
+		<connection>scm:git:http://github.com/SimonDevineau/MavenExtiaDemo</connection>
+		<developerConnection>scm:git:http://github.com/SimonDevineau/MavenExtiaDemo</developerConnection>
+		<tag>maven-demo-1.0.3</tag>
+	</scm>
+	<distributionManagement>
+		<repository>
+			<id>releases</id>
+			<name>Releases</name>
+			<url>http://localhost:9000/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<name>Snapshots</name>
+			<url>http://localhost:9000/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
+	<url>http://github.com/SimonDevineau/MavenExtiaDemo</url>
+	<description>This is an introduction to maven</description>
 </project>
